[project]
name = "pygrlogging-workspace"
authors = [
    {name = "ruizgabriel161",email = "ruizgabriel161@outlook.com"}
]
version = "0.1.0"
description = "Biblioteca para configurar Logs" 
requires-python = ">=3.13.1"
readme = "READMI.md"
license = "MIT"
dependencies = [
    "rich>=14.2.0",
    "pygrlogging"
]

# ============================
# uv
# ============================

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pygrlogging = {workspace = true}


[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["packages"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "packages" }]
reportMissingTypeStubs = true
stubPath = "stubs"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
]
